--- a/notes.tex
+++ b/notes.tex
@@ -226,8 +226,9 @@ The aforementioned SQL operations are supported via corresponding delegator meth
     \end{tabular}
 \end{center}
 
-\subsection{The _ID Column}
-
+\subsection{The \_ID Column}
+\includegraphics[width=0.3\textwidth]{img/warning_sign.eps}
+Every table
 
 \subsection{Thread concerns}
 
