--- a/notes.tex
+++ b/notes.tex
@@ -93,6 +93,10 @@ showstringspaces=false}
 
 \begin{abstract}
 This is a summary of the lectures given by Dr. Amnon Dekel and Mr. Haim Michael. It is assumed that the reader has prior knowledge of the course slides, and intimate acquaintance with the abilities of the Google search engine.
+
+The notes contain excerpts and code samples taken from Mr. Michael's slides; therefore, the copyrights of these notes belong to him. Please refer to \href{http://www.abelski.com/moodle/}{abelski.com} for more information.
+
+\includegraphics[width=0.05\textwidth]{img/warning_sign.eps} The course notes are incomplete as of yet!
 \end{abstract}
 
 \tableofcontents
@@ -239,6 +243,6 @@ Every table should have a \cw{\_id} column, with a unique value for each row. \e
 The contents of a database table can be delegated to 
 
 \section{Content providers}
-A Content provider is a component that lets the developer expose data (typically from a database), to other applications. 
+A Content provider is a component that lets the developer expose data (typically from a database), to other applications. The standard URI format for 
 
 \end{document}
